fixed file structure and delete comments

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NoFriendApp</title>
     <link rel="icon" href="./icons8-cat-48.png" type="image/icon type" />
-    <link rel="stylesheet" href="mainVersion.css" />
-    <script src="mainVersion.js" defer></script>
-    <!-- <link rel="stylesheet" href="popup.css" /> -->
-    <!-- <script src="main.js" defer></script> -->
+    <link rel="stylesheet" href="style.css" />
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
@@ -43,25 +41,25 @@
                 <div class="header-sex">
                     <span class="header-bottom__span">Sex:</span>
                     <span class="header-sex__icons">
-                        <span class="header-sex__male"><img src="./male-gender.png" data-id="male" ></span>
-                        <span class="header-sex__female"><img src="./female-gender.png" data-id="female"></span>
-                        <span class="header-sex__both"><img src="./male-and-female.png" data-id="both"></span>
+                        <span class="header-sex__male"><img src="./img/male-gender.png" data-id="male" ></span>
+                        <span class="header-sex__female"><img src="./img/female-gender.png" data-id="female"></span>
+                        <span class="header-sex__both"><img src="./img/male-and-female.png" data-id="both"></span>
                     </span>
                 </div>
                 <hr>
                 <div class="header-age">
                     <span class="header-bottom__span">Age:</span>
                     <span class="header-sex__icons">
-                        <span class="header-age__age-up"><img src="./up-arrow-white.png" data-direction="up"></span>
-                        <span class="header-age__age-down"><img src="./up-arrow-black.png" data-direction="down"></span>
+                        <span class="header-age__age-up"><img src="./img/up-arrow-white.png" data-direction="up"></span>
+                        <span class="header-age__age-down"><img src="./img/up-arrow-black.png" data-direction="down"></span>
                     </span>
                 </div>
                 <hr>
                 <div class="header-name">
                     <span class="header-bottom__span">Name:</span>
                     <span class="header-sex__icons">
-                        <span class="header-name__name-up"><img src="./up-arrow-white.png" data-direction="up"></span>
-                        <span class="header-name__name-down"><img src="./up-arrow-black.png" data-direction="down"></span>
+                        <span class="header-name__name-up"><img src="./img/up-arrow-white.png" data-direction="up"></span>
+                        <span class="header-name__name-down"><img src="./img/up-arrow-black.png" data-direction="down"></span>
                     </span>
                 </div>
             </div>
