--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Friends App</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="index.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
+    <script
+      src="index.js"
+      defer
+    ></script>
   </head>
   <body>
     <div class="wrapper">
@@ -24,10 +36,14 @@
             <span class="sort__span">Name:</span>
             <span class="sort__icons">
               <span class="name-up icon-hover name-icon"
-                ><img src="./img/up-arrow-white.png" data-direction="up"
+                ><img
+                  src="./img/up-arrow-white.png"
+                  data-direction="up"
               /></span>
               <span class="name-down icon-hover name-icon"
-                ><img src="./img/up-arrow-black.png" data-direction="down"
+                ><img
+                  src="./img/up-arrow-black.png"
+                  data-direction="down"
               /></span>
             </span>
           </div>
@@ -36,10 +52,14 @@
             <span class="sort__span">Age:</span>
             <span class="sort__icons">
               <span class="age-up icon-hover age-icon"
-                ><img src="./img/up-arrow-white.png" data-direction="up"
+                ><img
+                  src="./img/up-arrow-white.png"
+                  data-direction="up"
               /></span>
               <span class="age-down icon-hover age-icon"
-                ><img src="./img/up-arrow-black.png" data-direction="down"
+                ><img
+                  src="./img/up-arrow-black.png"
+                  data-direction="down"
               /></span>
             </span>
           </div>
@@ -48,13 +68,19 @@
             <span class="sort__span">Sex:</span>
             <span class="sort__icons">
               <span class="sex__male icon-hover sex-icon"
-                ><img src="./img/male-gender.png" data-id="male"
+                ><img
+                  src="./img/male-gender.png"
+                  data-id="male"
               /></span>
               <span class="sex__female icon-hover sex-icon"
-                ><img src="./img/female-gender.png" data-id="female"
+                ><img
+                  src="./img/female-gender.png"
+                  data-id="female"
               /></span>
               <span class="sex__both icon-hover sex-icon"
-                ><img src="./img/male-and-female.png" data-id="both"
+                ><img
+                  src="./img/male-and-female.png"
+                  data-id="both"
               /></span>
             </span>
           </div>
